[package]
name = "pink_accents"
version = "0.0.5"
authors = ["fogapod"]
edition = "2021"
description = "Replacement of patterns in string to simulate speech accents"
repository = "https://github.com/Fogapod/pink_accents"
homepage = "https://github.com/Fogapod/pink_accents"
license = "AGPL-3.0"
keywords = ["text"]
categories = ["text-processing"]
include = [
    "/README.md",
    "/Cargo.toml",
    "/src/*.rs",
    "LICENSE",
    # unfortunate but otherwise cargo publish fails becuase there is a bench target
    "/benches",
]

[dependencies]
rand = "0.8"
regex = "1.10"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.8", optional = true }
clap = { version = "4.4.7", optional = true, features = ["derive"] }

[dev-dependencies]
ron = { version = "0.8" }
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = ["deserialize"]
deserialize = ["dep:serde"]
cli = ["dep:clap", "deserialize", "dep:ron"]

[profile.dev]
opt-level = 3

[[bin]]
name = "pink_accents"
required-features = ["cli"]

[[bench]]
name = "accents"
harness = false
