[package]
name = "sayit"
version = "0.0.7"
authors = ["fogapod"]
edition = "2021"
description = "Replacement of patterns in string to simulate speech accents"
repository = "https://github.com/Fogapod/sayit"
homepage = "https://github.com/Fogapod/sayit"
license = "AGPL-3.0"
keywords = ["text"]
categories = ["text-processing"]
include = [
    "/README.md",
    "/Cargo.toml",
    "/src/*.rs",
    "LICENSE",
    # unfortunate but otherwise cargo publish fails becuase there is a bench target
    "/benches",
]

[dependencies]
# random replacements
rand = "0.8"

# pattern definition
regex = { version ="1.10", features = ["perf-dfa-full"] }

# logging
log = "0.4"

# cli parsing
clap = { version = "4.4", optional = true, features = ["derive"] }

# deserialization for Replacement trait
serde = { version = "1", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }

# deserializing ron file format
ron = { version = "0.8", optional = true }

# clone stored Replacement trait objects
dyn-clone = "1.0"

[dev-dependencies]
ron = { version = "0.8" }
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = ["deserialize"]

deserialize = ["dep:serde", "dep:typetag"]
ron = ["deserialize", "dep:ron"]
cli = ["dep:clap", "ron"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "sayit"
required-features = ["cli"]

[[bench]]
name = "accents"
harness = false

[[bench]]
name = "literal_string"
harness = false
