[package]
name = "sayit"
version = "0.3.0"
authors = ["fogapod"]
edition = "2021"
description = "String replacements using regex"
repository = "https://git.based.computer/fogapod/sayit"
homepage = "https://git.based.computer/fogapod/sayit"
license = "AGPL-3.0"
keywords = ["text"]
categories = ["text-processing"]
include = [
    "/README.md",
    "/Cargo.toml",
    "/src/*",
    "LICENSE",
    # unfortunate but otherwise cargo publish fails becuase there is a bench target
    "/benches",
]

[dependencies]
# random replacements
fastrand = "2.0"

# pattern definition
# excluded a couple unicode features
regex-automata = { version = "0.4", default-features = false, features = ["std", "perf", "meta", "nfa", "dfa", "hybrid", "unicode-case", "unicode-perl", "unicode-word-boundary"] }

# logging
log = "0.4"

# cli parsing
clap = { version = "4.4", optional = true, features = ["derive"] }

# deserialization for Tag trait
serde = { version = "1.0", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }

# format deserialization
ron = { version = "0.8", optional = true }

# clone stored Tag trait objects
dyn-clone = "1.0"

[dev-dependencies]
ron = { version = "0.8" }
serde_json = { version = "1.0" }
criterion = { version = "0.5", features = ["html_reports"] }
codspeed-criterion-compat = "2.4.0"

[features]
default = ["deserialize"]

deserialize = ["dep:serde", "dep:typetag"]
cli = ["deserialize", "dep:clap", "dep:ron"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "sayit"
required-features = ["cli"]

[[bench]]
name = "accents"
harness = false

[[bench]]
name = "examples"
harness = false

[[bench]]
name = "literal_string"
harness = false
